Closed
Bug 1475006
Opened 8 years ago
Closed 8 years ago
dist/include/mozilla/dom/ScriptSettings.h:383:3: error: 'AutoProfilerLabel' does not name a type; did you mean 'AutoPrepareTraversal'?
Categories
(Core :: Gecko Profiler, defect)
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | --- | unaffected |
| firefox63 | --- | fixed |
People
(Reporter: jbeich, Assigned: canova)
References
Details
(Keywords: regression)
Attachments
(1 file)
On Tier3 platforms without GeckoProfiler (Linux powerpc/sparc/s390x, BSDs, Solaris) the build is broken because only AUTO_PROFILER_LABEL is defined (per bug 1403868) but not AutoProfilerLabel. To reproduce on Tier1 platforms before bug 1371159 is fixed one has to force `return None` in gecko_profiler() in toolkit/moz.configure.
In file included from objdir/dom/script/Unified_cpp_dom_script0.cpp:20:
In file included from dom/script/ScriptElement.cpp:11:
In file included from objdir/dist/include/mozilla/dom/Element.h:27:
In file included from objdir/dist/include/nsPresContext.h:44:
In file included from objdir/dist/include/ScrollbarStyles.h:13:
In file included from objdir/dist/include/mozilla/dom/WindowBinding.h:12:
In file included from objdir/dist/include/mozilla/dom/CallbackFunction.h:20:
In file included from objdir/dist/include/mozilla/dom/CallbackObject.h:29:
objdir/dist/include/mozilla/dom/ScriptSettings.h:383:3: error:
unknown type name 'AutoProfilerLabel'
AutoProfilerLabel mAutoProfilerLabel;
^
In file included from objdir/dom/script/Unified_cpp_dom_script0.cpp:20:
In file included from dom/script/ScriptElement.cpp:11:
In file included from objdir/dist/include/mozilla/dom/Element.h:27:
In file included from objdir/dist/include/nsPresContext.h:44:
In file included from objdir/dist/include/ScrollbarStyles.h:13:
In file included from objdir/dist/include/mozilla/dom/WindowBinding.h:16:
In file included from objdir/dist/include/mozilla/dom/ToJSValue.h:13:
objdir/dist/include/mozilla/dom/BindingUtils.h:3267:27: error:
cannot initialize object parameter of type 'const mozilla::dom::AutoJSAPI' with an expression of type
'mozilla::dom::AutoEntryScript'
JS::Rooted<JS::Value> v(aes.cx(), JS::ObjectValue(*obj));
^~~
objdir/dist/include/mozilla/dom/BindingUtils.h:3268:27: error:
cannot initialize object parameter of type 'const mozilla::dom::AutoJSAPI' with an expression of type
'mozilla::dom::AutoEntryScript'
return aDictionary.Init(aes.cx(), v);
^~~
In file included from objdir/dom/script/Unified_cpp_dom_script0.cpp:47:
dom/script/ScriptLoader.cpp:480:21: error: cannot initialize object parameter of type
'const mozilla::dom::AutoJSAPI' with an expression of type 'mozilla::dom::AutoEntryScript'
JSContext* cx = aes.cx();
^~~
dom/script/ScriptLoader.cpp:491:41: error: no viable conversion from
'mozilla::dom::AutoEntryScript' to 'const mozilla::dom::AutoJSAPI'
rv = FillCompileOptionsForRequest(aes, aRequest, global, &options);
^~~
dom/script/ScriptSettings.h:308:3: note: candidate constructor not viable: no known
conversion from 'mozilla::dom::AutoEntryScript' to 'const mozilla::dom::AutoJSAPI &' for 1st argument
AutoJSAPI(const AutoJSAPI&) = delete;
^
dom/script/ScriptLoader.h:491:72: note: passing argument to parameter 'jsapi' here
nsresult FillCompileOptionsForRequest(const mozilla::dom::AutoJSAPI& jsapi,
^
In file included from objdir/dom/script/Unified_cpp_dom_script0.cpp:47:
dom/script/ScriptLoader.cpp:511:12: error: cannot initialize object parameter of type
'mozilla::dom::AutoJSAPI' with an expression of type 'mozilla::dom::AutoEntryScript'
if (!aes.StealException(&error)) {
^~~
dom/script/ScriptLoader.cpp:2251:19: error: cannot initialize object parameter of type
'const mozilla::dom::AutoJSAPI' with an expression of type 'mozilla::dom::AutoEntryScript'
JSContext* cx = aes.cx();
^~~
dom/script/ScriptLoader.cpp:2307:41: error: no viable conversion from
'mozilla::dom::AutoEntryScript' to 'const mozilla::dom::AutoJSAPI'
rv = FillCompileOptionsForRequest(aes, aRequest, global, &options);
^~~
dom/script/ScriptSettings.h:308:3: note: candidate constructor not viable: no known
conversion from 'mozilla::dom::AutoEntryScript' to 'const mozilla::dom::AutoJSAPI &' for 1st argument
AutoJSAPI(const AutoJSAPI&) = delete;
^
dom/script/ScriptLoader.cpp:2071:60: note: passing argument to parameter 'jsapi' here
ScriptLoader::FillCompileOptionsForRequest(const AutoJSAPI&jsapi,
^
dom/script/ScriptLoader.cpp:2478:27: error: cannot initialize object parameter of type
'const mozilla::dom::AutoJSAPI' with an expression of type 'mozilla::dom::AutoEntryScript'
EncodeRequestBytecode(aes.cx(), request);
^~~
dom/script/ScriptLoader.cpp:2566:31: error: cannot initialize object parameter of type
'const mozilla::dom::AutoJSAPI' with an expression of type 'mozilla::dom::AutoEntryScript'
JS::RootedScript script(aes->cx(), request->mScript);
^~~
dom/script/ScriptLoader.cpp:2567:47: error: cannot initialize object parameter of type
'const mozilla::dom::AutoJSAPI' with an expression of type 'mozilla::dom::AutoEntryScript'
Unused << JS::FinishIncrementalEncoding(aes->cx(), script,
^~~
In file included from objdir/dom/script/Unified_cpp_dom_script0.cpp:56:
dom/script/ScriptSettings.cpp:653:21: error: cannot initialize object parameter of type
'const mozilla::dom::AutoJSAPI' with an expression of type 'mozilla::dom::AutoEntryScript'
, mCallerOverride(cx())
^~
dom/script/ScriptSettings.cpp:660:35: error: cannot initialize object parameter of type
'const mozilla::dom::AutoJSAPI' with an expression of type 'mozilla::dom::AutoEntryScript'
mDocShellEntryMonitor.emplace(cx(), aReason);
^~
In file included from objdir/dom/script/Unified_cpp_dom_script0.cpp:20:
In file included from dom/script/ScriptElement.cpp:11:
In file included from objdir/dist/include/mozilla/dom/Element.h:27:
In file included from objdir/dist/include/nsPresContext.h:44:
In file included from objdir/dist/include/ScrollbarStyles.h:13:
In file included from objdir/dist/include/mozilla/dom/WindowBinding.h:12:
In file included from objdir/dist/include/mozilla/dom/CallbackFunction.h:20:
In file included from objdir/dist/include/mozilla/dom/CallbackObject.h:29:
dom/script/ScriptSettings.h:383:21: error: private field 'mAutoProfilerLabel' is not used
[-Werror,-Wunused-private-field]
AutoProfilerLabel mAutoProfilerLabel;
^
14 errors generated.
status-firefox61:
--- → unaffected
status-firefox62:
--- → unaffected
status-firefox-esr60:
--- → unaffected
OS: Unspecified → FreeBSD
| Assignee | ||
Comment 1•8 years ago
|
||
Sorry about that. Will fix it now.
Assignee: nobody → canaltinova
Status: NEW → ASSIGNED
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 3•8 years ago
|
||
I'm not on a Tier3 platform but reproduced with the `gecko_profiler()` change as you said. Also I can confirm that this patch fixes the build failure. But to completely sure I think we can try to build in one of these platforms. Is there a way to trigger a try build with Tier3 platform?
Comment on attachment 8991559 [details]
Bug 1475006 - Remove mAutoProfilerLabel from AutoEntryScript in non-MOZ_GECKO_PROFILER builds
Thanks. I confirm the patch is enough to unbreak FreeBSD build. Also tested with --enable-warnings-as-errors to mimic Mozilla automation.
(In reply to Nazım Can Altınova [:canaltinova] from comment #3)
> Is there a way to trigger a try build with Tier3 platform?
None of Tier3 platforms are on Mozilla automation. Supporting one requires generating --sysroot from base system install, massaging cross-compilation from Linux, creating a TaskCluster job then bribing Mozilla to run it periodically. Fixing bug 1371159 may be easier.
Attachment #8991559 -
Flags: feedback+
Comment 5•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8991559 [details]
Bug 1475006 - Remove mAutoProfilerLabel from AutoEntryScript in non-MOZ_GECKO_PROFILER builds
https://reviewboard.mozilla.org/r/256480/#review263800
Attachment #8991559 -
Flags: review?(mstange) → review+
Pushed by canaltinova@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/2e302dfe1142
Remove mAutoProfilerLabel from AutoEntryScript in non-MOZ_GECKO_PROFILER builds r=mstange
Comment 7•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Updated•8 years ago
|
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•