Bug 1475006 - Remove mAutoProfilerLabel from AutoEntryScript in non-MOZ_GECKO_PROFILER builds r=mstange

MozReview-Commit-ID: 66mZK4q2ATK